# inzhinirium-tasks

taskCheckSite/: text.md
taskCpp1-2/: main.cpp  task1.cbp  task1.depend  task1.layout
taskCpp3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
taskWeb/: places.html  reviews.html  server.py
taskWeb/assets/: style.css
taskWeb/templates/: footer.html  header.html  places.html  reviews.html
